<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Priority">

    <TextView
        android:id="@+id/crime_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/vandalism"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="normal"
        android:background="@color/green" />

    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/crime_type"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/place_vandalism"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="Mewar College Vasundhara" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/time"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/_12_45" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/priority"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal" />

    <RadioGroup
        android:id="@+id/priority_grp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_priority"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/p_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/p1" />

        <RadioButton
            android:id="@+id/p_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/p2" />

        <RadioButton
            android:id="@+id/p_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/p3" />

        <RadioButton
            android:id="@+id/p_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/p4" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_dept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priority_grp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_dept"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal" />

    <Spinner
        android:id="@+id/dept_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_dept"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp" />
</RelativeLayout>